applications/openeuler-website-v2/ingress-main.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/limit-connections: "200"
    nginx.ingress.kubernetes.io/limit-rps: "200"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header X-XSS-Protection "1; mode=block";
      add_header Strict-Transport-Security "max-age=31536000";
      add_header X-Frame-Options "SAMEORIGIN";
      add_header Content-Security-Policy "script-src 'self' *.baidu.com ers.baidu.com 'unsafe-eval' 'unsafe-inline';object-src 'none';frame-ancestors 'self'";
      server_tokens off;
  name: website-v2-ingress-main
spec:
  tls:
    - hosts:
        - next.openeuler.org
      secretName: website-v2-tls-main
  rules:
    - host: next.openeuler.org
      http:
        paths:
          - backend:
              serviceName: website-frontend-service
              servicePort: 80
            path: /
          - backend:
              serviceName: openeuler-bot-internal
              servicePort: 8888
            path: /cla
